# masterblog

./: app.py  blog_data.json  pyproject.toml
templates/: add.html  delete.html  index.html  update.html
tests/: test_default.py
