[tool.poetry]
name = "pythonproject"
version = "0.1.0"
description = ""
authors = ["MightContainNuts <mightcontainnuts@icloud.com>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.13"
flask = "^3.1.0"
pre-commit = "^4.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# pytest.ini
[pytest]
addopts = "--disable-warnings"
